--- a/views/toDo.ejs
+++ b/views/toDo.ejs
@@ -10,7 +10,7 @@
     <title>To Do App</title>
   </head>
   <body>
-    <h1>My To-Do List</h1>
+    <h1><%= user.firstname %>'s To-Do List</h1>
     <div id = "to-do-table">
       <form>
         <input type="text" name = "item" id = "newTask" placeholder="Add New Task" required>
@@ -22,7 +22,7 @@
         <% } %>
       </ul>
     </div>
-
+   <a href="/logout" class="btn btn-default btn-sm">Logout</a>
   </body>
   <script src="/assets/todo-list.js" type = "text/javascript"></script>
 </html>
